Adiciona biblioteca de validação de form

--- a/fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-01-html-css-forms/package.json
+++ b/fundamentos/bloco-06-html-e-css-forms-flexbox-e-responsivo/dia-01-html-css-forms/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "moment": "^2.29.1",
-    "pikaday": "^1.8.2"
+    "pikaday": "^1.8.2",
+    "popup-validation": "^3.0.3"
   }
 }
