--- a/back-end/bloco-26-typescript/dia-01-introducao-ao-typescript/my-ts-scripts/package.json
+++ b/back-end/bloco-26-typescript/dia-01-introducao-ao-typescript/my-ts-scripts/package.json
@@ -9,5 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "typescript": "^4.6.2"
+  }
 }
