--- a/back-end/bloco-26-typescript/dia-01-introducao-ao-typescript/my-ts-scripts/package.json
+++ b/back-end/bloco-26-typescript/dia-01-introducao-ao-typescript/my-ts-scripts/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@types/readline-sync": "^1.4.4",
+    "readline-sync": "^1.4.10"
+  },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "typescript": "^4.6.2"
   }
 }
