--- a/back-end/bloco-26-typescript/dia-01-introducao-ao-typescript/my-ts-scripts/package.json
+++ b/back-end/bloco-26-typescript/dia-01-introducao-ao-typescript/my-ts-scripts/package.json
@@ -16,6 +16,11 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "typescript": "^4.6.2"
   }
 }
